# bio-demo

./: .coveragerc  .gitignore  Makefile  app.py  chequeo_sistema.py  convert_home.py  convert_home_write.py  generate_data.py  instalar_deps.py  landing_page.html  mypy.ini  pyproject.toml  pytest.ini  raw_home.html  reparar_entorno.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  users.json  usuarios_db.json
.github/workflows/: tests.yml
.hypothesis/constants/: 0001e38f52f8a955  24abf2bd161775cd  3e0489e7ffe37a2c  40ad902c9ea595f3  9d732f9931af9921  a356f6d2a2dab167  bb9b0e9eaca20081
.hypothesis/examples/04e6b3400353b141/: 2b8206a89f092935  2cb0c1a609b7466a  3d4a250cf29cfbc8  528a23c66bc109af  58461d5fe9e40f4d  70f795aa8912cc82  a13a28b9747c5493  dc21ffe2dd6bc2d4  e8c688025d76fa95
.hypothesis/examples/2b8206a89f092935/: 06d33e6326b49da1  0cdbe1a70855e617  0d2798158b77c9eb  0df94bc1e566a17f  142a4cb0bb63c45d  16029a9b2bb4c1c5  180f941296557fd9  1d68ebcf5f5a7d42  1ed463d03c57b943  205a0d6b625152f7  23d1dac2fd24cd45  2b0ad0621d65c4a4  2b76c24cce631258  2e82d637f134afaf  3024dfc848d5a04c  31e89e43e0caf1bd  3574a40b3b0f0839  35f1b96eacc3230d  3f0956deb303967d  457dab02d6d20410  45a9f5fbeadb1cba  5819f036bdc33044  5f089ced663b65b7  6095e79e2e457431  6271553ecd768805  650d2701c88c3a59  6a0df7d9c1d4425b  6bcf2a997ae33a45  6dcc38c92e893ee4  7546d6281f3f9b3d  76cf90490eb1ac23  780dd965a1862aac  7b86baaa95b37a25  8048ba2d30c35c71  80c0a64eecd3ce6c  8d65ce58fd19d061  8f2298b40c4d302a  93893e5aa567c946  939dc70162c2666a  98719524ad007e67  (+24 more)
.hypothesis/examples/2cb0c1a609b7466a/: 7496b353c5dc3f61
.hypothesis/examples/3d4a250cf29cfbc8/: 046e3d332d5fa956
.hypothesis/examples/528a23c66bc109af/: 1c7cd904f99a55f2
.hypothesis/examples/58461d5fe9e40f4d/: 06acac9fb2f01784  0f3cff7f8bea5e45  1a8e14a26cca5927  (+5 more)
Bioestadistica Web App UI Kit/: README.md  index.html  package.json
Bioestadistica Web App UI Kit/src/: App.tsx  home-streamlit.html  index.css
assets/: style.css
backend/: main.py  test_smoke.py
data/: chats.db
modules/: Copia de utils.py  __init__.py  ai_chat.py  ai_logic.py  ai_store.py  cleaning.py  data_normalization.py  home.py  lib_checker.py  performance_helper.py  plots.py  reporte.py  reports.py  types.py  ui.py  utils.py
modules/stats/: __init__.py  ajuste_tasas.py  asociaciones.py  calculadora.py  calculos_tasas.py  concordancia.py  descriptiva.py  diagnostico.py  explorador.py  inference.py  inferencia.py  modelos.py  multivariado.py  multivariate.py  psicometria.py  psychometrics.py  regression.py  supervivencia.py  survival.py  tabla1.py  utils.py  validador_datos.py
proyectos_guardados/Proyecto_Tesis_v1/: data.pkl  metadata.json
tests/: conftest.py  test_calculos_tasas_manual.py  test_descriptive_stats.py  test_edge_cases.py  test_hypothesis_tests.py  test_normalization.py  test_regression.py  test_smr.py  test_stats.py  test_types.py  test_validator.py
(+73 files in other folders)
