[metadata]
name = biostat-easy
version = 1.0.0
description = Bioestadística para investigación médica
long_description = file: README.md
long_description_content_type = text/markdown
author = Usuario Ecuador
author_email = usuario@example.com
url = https://github.com/usuario/biostat-easy
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    pandas>=1.2.0
    scipy>=1.6.0
    statsmodels>=0.12.0
    scikit-learn>=0.24.0

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.12.0
    hypothesis>=6.0
    black>=21.0
    mypy>=0.900
    flake8>=3.9.0
    sphinx>=4.0

[options.packages.find]
where = .
include = modules*

[black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = \.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.venv,.tox,build,dist,.eggs
ignore = E203,W503,E501

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
